# notion-scriba

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  GITHUB_LICENSE_UPDATE_REPORT.md  GITHUB_SETUP.md  INTERACTIVE_MODE_GUIDE.md  LICENSE  PHASE_4.6_COMPLETION_REPORT.md  PROJECT_COMPLETION_REPORT.md  README.md  REBRANDING_REPORT.md  SETUP_WIZARD_REPORT.md  add_gpl_headers.py  demo_interactive.py  pyproject.toml
.github/workflows/: notion-scriba-auto-generation.yml
.github_workflow_patch/: vitruvyan-docs-auto-generation.yml
docs/: notion_setup.md
examples/: example_usage.py  setup_wizard_example.py
src/_archive/notion_docs_synapse_2025-10-25/: code_analyzer.py  notion_client.py  setup_wizard.py  templates.py
src/_archive/notion_docs_synapse_2025-10-25/llm/: __init__.py  factory.py  openai_provider.py
src/notion_docs_synapse/: __init__.py
src/notion_docs_synapse/llm/: google_provider.py
src/notion_scriba/: __init__.py  cli.py  doc_generator.py  interactive_mode.py
src/notion_scriba/llm/: anthropic_provider.py  base.py  deepseek_provider.py  ollama_provider.py
